# SemanRAG

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lite  Makefile  README.md  config.ini.example  docker-compose-full.yml  docker-compose.yml  env.example  prompts.md  pyproject.toml  semanrag.service.example
.github/workflows/: ci.yml  docker.yml  eval-regression.yml
deploy/: lambda_function.py
k8s-deploy/helm/: Chart.yaml  values.yaml
k8s-deploy/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
k8s-deploy/manifests/: deployment.yaml
observability/: otel-collector-config.yaml  prometheus.yml
observability/grafana/: semanrag-dashboard.json
scripts/setup/: setup.sh
semanrag/: __init__.py  base.py  operate.py  performance.py  prompt.py  semanrag.py  utils.py  utils_graph.py
semanrag/api/: acl.py  auth.py  config.py  passwords.py  semanrag_server.py  telemetry.py
semanrag/api/routers/: __init__.py  admin_routes.py  document_routes.py  feedback_routes.py  graph_routes.py  ollama_api.py  query_routes.py
semanrag/cli/: __init__.py
semanrag/evaluation/: __init__.py  ab_prompt.py  metrics.py  regression_gate.py  runner.py
semanrag/evaluation/baselines/: baseline.json
semanrag/evaluation/goldens/: agriculture.jsonl  cs.jsonl  finance.jsonl  legal.jsonl  mixed.jsonl
semanrag/kg/: faiss_impl.py  inmemory_bm25_impl.py  json_doc_status_impl.py  json_kv_impl.py  memgraph_impl.py  milvus_impl.py  mongo_impl.py  nano_vector_db_impl.py  neo4j_impl.py  networkx_impl.py  opensearch_impl.py  postgres_impl.py  qdrant_impl.py  redis_impl.py  shared_storage.py  tantivy_lexical_impl.py
semanrag/llm/: __init__.py  anthropic_impl.py  bedrock_impl.py  gemini_impl.py  hf_impl.py  llama_index_impl.py  ollama_impl.py  openai_impl.py  vllm_impl.py  zhipu_impl.py
semanrag/rerank/: __init__.py  ali_rerank.py  bge_rerank.py  cohere_rerank.py  jina_rerank.py  local_cross_encoder.py
semanrag/safety/: __init__.py  acl.py  output_sanitizer.py  pii.py  prompt_injection.py
semanrag/tools/: check_initialization.py  clean_llm_query_cache.py  download_cache.py  hash_password.py  migrate_llm_cache.py  resolve_entities.py  scan_orphans.py  scan_stale.py
semanrag/verify/: __init__.py  grounded_check.py
semanrag_webui/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
semanrag_webui/src/: App.tsx  index.css
semanrag_webui/src/components/: CommandPalette.tsx  Layout.tsx
semanrag_webui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
semanrag_webui/src/i18n/: en.json  es.json  index.ts  ja.json  zh.json
semanrag_webui/src/lib/: semanrag.ts  ws.ts
semanrag_webui/src/pages/: AdminPage.tsx  ChatPage.tsx  DocumentsPage.tsx  GraphPage.tsx  LoginPage.tsx  SettingsPage.tsx
semanrag_webui/src/stores/: admin.ts  auth.ts  chat.ts  eval.ts  graph.ts  settings.ts  state.ts
specs/: mission.md  roadmap.md  tech-stack.md
tests/: conftest.py  test_ab_prompt.py  test_acl.py  test_auth.py  test_batch_embeddings.py  test_bm25_impl.py  test_chunking.py  test_community_detection.py  test_description_api_validation.py  test_doc_status_chunk_preservation.py  test_entity_resolution.py  test_extract_entities.py  test_faiss_meta_inconsistency.py  test_grounded_check.py  test_interactive_setup_outputs.py  test_memgraph_storage.py  test_milvus_index_config.py  test_neo4j_fulltext_index.py  test_opensearch_storage.py  test_output_sanitizer.py  test_pii.py  test_postgres_migration.py  test_prompt_injection.py  test_qdrant_migration.py  test_query_transformation.py  test_regression_gate.py  test_rrf_fusion.py  test_shared_storage.py  test_streaming.py  test_temporal_queries.py  test_token_budget.py  test_workspace_isolation.py  test_write_json_optimization.py
tests/bench/: bench_chunking.py  bench_community_detection.py  bench_entity_resolution.py  bench_rrf.py
